# emap

./: .gitignore  .rultor.yml  Cargo.toml  README.md  REUSE.toml  deny.toml  rebuild_benchmark.sh
.cargo/: config.toml
.github/: markdownlint.yml
.github/workflows/: actionlint.yml  bashate.yml  benchmark.yml  cargo.yml  copyrights.yml  markdown-lint.yml  pdd.yml  reuse.yml  shellcheck.yml  tarpaulin.yml  typos.yml  up.yml  xcop.yml  yamllint.yml
benches/: compare_with_intmap.rs  compare_with_intmap_unchecked.rs  compare_with_vec.rs  insert.rs  remove.rs  with_capacity.rs
src/: clone.rs  ctors.rs  debug.rs  error.rs  func.rs  index.rs  item.rs  iterators.rs  keys.rs  lib.rs  map.rs  next_key.rs  node.rs  serialization.rs  values.rs
tests/: benchmark.rs  benchmark_unchecked.rs
