# SPDX-FileCopyrightText: Copyright (c) 2023-2025 Yegor Bugayenko
# SPDX-License-Identifier: MIT

[package]
name = "emap"
version = "0.0.0"
edition = "2024"
repository = "https://github.com/yegor256/emap"
description = "A map with a fixed capacity and integers as keys"
readme = "README.md"
license = "MIT"
homepage = "https://github.com/yegor256/emap"
keywords = ["memory", "map"]
categories = ["data-structures", "memory-management"]

[dependencies]
intmap = "3.1.2"
serde = { version = "1", features = ["derive"], optional = true }
bincode = { version = "2", features = ["serde"], optional = true }

[dev-dependencies]
paste = "1.0"
criterion = { version = "0.7", features = ["html_reports"] }

[features]
default = []
serde = ["dep:serde", "dep:bincode"]
bench_unchecked = []

[[bench]]
name = "insert_bench"
harness = false
path = "benches/insert.rs"

[[bench]]
name = "remove_bench"
harness = false
path = "benches/remove.rs"

[[bench]]
name = "compare_with_initmap"
harness = false
path = "benches/compare_with_intmap.rs"
