# SPDX-FileCopyrightText: Copyright (c) 2023-2026 Yegor Bugayenko
# SPDX-License-Identifier: MIT

[package]
name = "emap"
version = "0.0.0"
edition = "2024"
repository = "https://github.com/yegor256/emap"
description = "A map with a fixed capacity and integers as keys"
readme = "README.md"
license = "MIT"
homepage = "https://github.com/yegor256/emap"
keywords = ["memory", "map"]
categories = ["data-structures", "memory-management"]

[lints.rust]
unexpected_cfgs = "allow"
mismatched_lifetime_syntaxes = "allow"
unused_parens = "allow"
deprecated = "allow"
irrefutable_let_patterns = "allow"

[dependencies]
serde = { version = "1", features = ["derive"], optional = true }
bincode = { version = "2", features = ["serde"], optional = true }
criterion = { version = "0.7", features = ["html_reports"], optional = true }

[dev-dependencies]
intmap = "3.1.3"

[features]
default = []
serde = ["dep:serde", "dep:bincode"]
benchmarks = ["dep:criterion"]
bench_unchecked = []

[[bench]]
name = "insert_bench"
harness = false
path = "benches/insert.rs"
required-features = ["benchmarks"]

[[bench]]
name = "remove_bench"
harness = false
path = "benches/remove.rs"
required-features = ["benchmarks"]

[[bench]]
name = "compare_with_intmap"
harness = false
path = "benches/compare_with_intmap.rs"
required-features = ["benchmarks"]
